GCA-144 Configure CORS policy